# repository-harness

./: CHANGELOG.md  Cargo.toml  PHASE5.md  README.md
.github/workflows/: harness-cli-release.yml  harness-release.yml
.harness/changesets/: run_0000000000_seed_symphony_index.changeset.jsonl  run_1782536604_52965.changeset.jsonl  run_1783163412740491000_6614_1.changeset.jsonl  run_1783164291664744000_6614_2.changeset.jsonl  run_1783178537862657000_95182_0.changeset.jsonl  run_1783179886029971000_7111_0.changeset.jsonl  run_1783224245101133000_18033_0.changeset.jsonl  run_1783399293702861000_us069.changeset.jsonl  run_1783520000000000000_us070.changeset.jsonl  run_1783676834844503000_28702_0.changeset.jsonl  run_1783741281_us082_review_finding_closure.changeset.jsonl  run_1783741400_e09_proof_parity.changeset.jsonl  run_1783743300_us083_post_review_closure.changeset.jsonl  run_1783744000_us084_proof_audit_closure.changeset.jsonl  (+2 more)
crates/harness/: Cargo.toml
crates/harness-cli/: Cargo.toml
crates/harness-cli/src/: application.rs  domain.rs  infrastructure.rs  interface.rs
docs/: GLOSSARY.md  HARNESS_COMPONENTS.md  IMPROVEMENT_PROTOCOL.md  README.md  SYMPHONY_QUICKSTART.md  SYMPHONY_SCOPE.md  TOOL_REGISTRY.md
scripts/: README.md  e11-us097-dispositions.py  e11-us097-inventory.py  e11-us097-prepare-core.py  harness-cli-release-tag  harness-install-files.txt  harness-release-tag  install-harness.ps1  install-harness.sh  test-validate-changeset-rebuild.sh  validate-changeset-rebuild.sh  validate-premerge.sh  verify-e11-us097.sh  verify-e11-us099.sh  verify-e11-us100.sh
(+171 files in other folders)
