[package]
name = "harness-cli"
version = "0.1.11"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = "0.4.42"
clap = { version = "4.6.1", features = ["derive"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
unicode-normalization = "0.1.24"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"
